[package]
name = "unique-ipv4-counter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
memmap2 = "0.9.5"
thread-priority = "1.2.0"
wide = "0.7.28"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
panic = "abort"
overflow-checks = false
opt-level = 3
debug = "full"
lto = true
codegen-units = 1
